--- a/index.html
+++ b/index.html
@@ -5,82 +5,130 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>📋 Painel Administrativo - Mercatto Delivery</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+
 <style>
 :root {
   --bg:#f4f1ec;--card:#fffaf5;--accent:#b8860b;--ink:#3a2e1f;
-  --radius:10px;--shadow:0 3px 6px rgba(0,0,0,0.1);
+  --radius:10px;--shadow:0 3px 8px rgba(0,0,0,0.1);
 }
+
+/* ===== BASE ===== */
 *{box-sizing:border-box;margin:0;padding:0;}
 body{
   font-family:'Inter',sans-serif;
   background:var(--bg);
   color:var(--ink);
-  padding-bottom:80px;
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
 }
+
+/* ===== CABEÇALHO ===== */
 header{
   background:var(--accent);
   color:#fff;
   text-align:center;
-  padding:15px;
+  padding:18px;
   font-family:'Playfair Display',serif;
-  font-size:22px;
+  font-size:26px;
   box-shadow:var(--shadow);
+  letter-spacing:0.5px;
 }
-.container{
-  max-width:1000px;
-  margin:20px auto;
+
+/* ===== CONTEÚDO ===== */
+main{
+  flex:1;
+  display:flex;
+  flex-direction:column;
+  padding:20px;
+  gap:20px;
+}
+
+/* ===== CAIXA PRINCIPAL ===== */
+.painel{
   background:var(--card);
   border-radius:var(--radius);
   box-shadow:var(--shadow);
   padding:20px;
+  display:flex;
+  flex-direction:column;
+  height:calc(100vh - 130px);
+  overflow:hidden;
 }
-h2{
-  color:var(--accent);
-  margin-bottom:10px;
-  font-family:'Playfair Display',serif;
-}
+
+/* ===== FILTROS ===== */
 .filtros{
   display:flex;
-  flex-wrap:wrap;
+  align-items:center;
   gap:10px;
-  margin-bottom:15px;
+  margin-bottom:12px;
+  flex-wrap:wrap;
 }
-.filtros input,.filtros select{
-  padding:8px;
+.filtros input, .filtros select{
+  padding:10px;
   border-radius:6px;
   border:1px solid #d7ccbb;
+  background:#fff;
   flex:1;
   min-width:150px;
+  font-size:14px;
+}
+.filtros button{
+  background:var(--accent);
+  color:#fff;
+  border:none;
+  border-radius:6px;
+  padding:10px 16px;
+  font-weight:600;
+  cursor:pointer;
+  transition:0.2s;
+}
+.filtros button:hover{opacity:0.9;}
+
+/* ===== TABELA ===== */
+.tabela-container{
+  flex:1;
+  overflow:auto;
+  border:1px solid #e0d7c5;
+  border-radius:var(--radius);
 }
 table{
   width:100%;
   border-collapse:collapse;
-  margin-top:10px;
+  font-size:15px;
 }
-th,td{
-  border:1px solid #e0d7c5;
-  padding:8px;
-  font-size:14px;
+th, td{
+  padding:10px 12px;
+  border-bottom:1px solid #eae2d2;
   text-align:left;
-  vertical-align:top;
 }
 th{
   background:var(--accent);
   color:#fff;
+  position:sticky;
+  top:0;
+  z-index:2;
+  font-family:'Playfair Display',serif;
 }
 tr:nth-child(even){background:#fdfaf5;}
+tr:hover{background:#fff4dd;transition:0.2s;}
+
+/* ===== STATUS ===== */
 .status{
-  padding:5px 10px;
-  border-radius:6px;
+  display:inline-block;
+  padding:6px 10px;
+  border-radius:8px;
   font-weight:600;
   color:#fff;
   font-size:13px;
 }
 .status.Recebido{background:#6b7280;}
-.status["Em preparo"], .status["Em preparo"]{background:#eab308;}
-.status["Saiu para entrega"], .status["Saiu"]{background:#2563eb;}
+.status["Em preparo"], .status["Em_preparo"], .status.Em_preparo{background:#eab308;}
+.status["Saiu para entrega"], .status["Saiu"], .status.Saiu{background:#2563eb;}
 .status.Entregue{background:#16a34a;}
 .status.Cancelado{background:#b91c1c;}
+
+/* ===== BOTÕES ===== */
 button{
   background:var(--accent);
   color:#fff;
@@ -89,16 +137,25 @@ button{
   padding:6px 12px;
   cursor:pointer;
   font-weight:600;
+  transition:0.2s;
 }
-button:hover{opacity:.9;}
+button:hover{opacity:.85;}
+select{
+  border:1px solid #d7ccbb;
+  border-radius:6px;
+  padding:6px;
+  background:#fff;
+  font-size:14px;
+}
 #btnAtualizar{
-  margin-left:auto;
-  display:block;
   margin-top:10px;
+  align-self:flex-end;
 }
+
+/* ===== PRINT ===== */
 @media print {
   header,.filtros,#btnAtualizar{display:none;}
-  .container{box-shadow:none;}
+  .painel{box-shadow:none;border:none;}
   body{background:white;}
 }
 </style>
@@ -107,49 +164,51 @@ button:hover{opacity:.9;}
 
 <header>🍽️ Painel Administrativo - Mercatto Delivery</header>
 
-<div class="container">
-  <h2>📦 Pedidos Recebidos</h2>
+<main>
+  <div class="painel">
+    <div class="filtros">
+      <input type="date" id="filtroData">
+      <input type="text" id="filtroNome" placeholder="Buscar cliente...">
+      <select id="filtroStatus">
+        <option value="">Todos os Status</option>
+        <option>Recebido</option>
+        <option>Em preparo</option>
+        <option>Saiu para entrega</option>
+        <option>Entregue</option>
+        <option>Cancelado</option>
+      </select>
+      <button onclick="filtrarPedidos()">🔍 Filtrar</button>
+      <button onclick="window.print()">🖨️ Imprimir</button>
+      <button id="btnAtualizar" onclick="carregarPedidos()">🔄 Atualizar</button>
+    </div>
 
-  <div class="filtros">
-    <input type="date" id="filtroData">
-    <input type="text" id="filtroNome" placeholder="Buscar cliente...">
-    <select id="filtroStatus">
-      <option value="">Todos os Status</option>
-      <option>Recebido</option>
-      <option>Em preparo</option>
-      <option>Saiu para entrega</option>
-      <option>Entregue</option>
-      <option>Cancelado</option>
-    </select>
-    <button onclick="filtrarPedidos()">Filtrar</button>
-    <button onclick="window.print()">🖨️ Imprimir</button>
+    <div class="tabela-container">
+      <table id="tabelaPedidos">
+        <thead>
+          <tr>
+            <th style="width:12%">Data/Hora</th>
+            <th style="width:15%">Cliente</th>
+            <th style="width:25%">Itens</th>
+            <th style="width:20%">Endereço</th>
+            <th style="width:10%">Pagamento</th>
+            <th style="width:8%">Total</th>
+            <th style="width:10%">Status</th>
+            <th style="width:10%">Ações</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </div>
-
-  <table id="tabelaPedidos">
-    <thead>
-      <tr>
-        <th>Data/Hora</th>
-        <th>Cliente</th>
-        <th>Itens</th>
-        <th>Endereço</th>
-        <th>Pagamento</th>
-        <th>Total</th>
-        <th>Status</th>
-        <th>Ações</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <button id="btnAtualizar" onclick="carregarPedidos()">🔄 Atualizar</button>
-</div>
+</main>
 
 <script>
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbwaa6le5y5ZQk-0Po5rHKtjsr4nx-rGWBMor6RkXBc9uycTes5lLgKkfjgcRK7LrCwi/exec";
 let pedidos = [];
 
 async function carregarPedidos(){
-  document.querySelector("#tabelaPedidos tbody").innerHTML = "<tr><td colspan='8' style='text-align:center;'>⏳ Carregando...</td></tr>";
+  const tbody = document.querySelector("#tabelaPedidos tbody");
+  tbody.innerHTML = "<tr><td colspan='8' style='text-align:center;padding:20px;'>⏳ Carregando...</td></tr>";
   try {
     const r = await fetch(ENDPOINT + "?acao=listar");
     pedidos = await r.json();
@@ -167,12 +226,12 @@ function renderPedidos(lista){
     const tr = document.createElement("tr");
     tr.innerHTML = `
       <td>${p.dataHora||"-"}</td>
-      <td>${p.nome}</td>
+      <td>${p.nome||"-"}</td>
       <td>${p.itens||"-"}</td>
       <td>${p.endereco||""}, ${p.numero||""} - ${p.bairro||""}</td>
       <td>${p.forma||"-"}</td>
       <td><strong>R$${Number(p.total||0).toFixed(2)}</strong></td>
-      <td><span class="status ${p.status||'Recebido'}">${p.status||'Recebido'}</span></td>
+      <td><span class="status ${p.status?.replace(/\s/g,'_')||'Recebido'}">${p.status||'Recebido'}</span></td>
       <td>
         <select onchange="mudarStatus('${p.id}', this.value)">
           <option selected hidden>${p.status||'Recebido'}</option>
@@ -183,8 +242,7 @@ function renderPedidos(lista){
           <option>Cancelado</option>
         </select>
         <button onclick="imprimirPedido('${p.nome}','${p.itens}','${p.total}')">🖨️</button>
-      </td>
-    `;
+      </td>`;
     tbody.appendChild(tr);
   });
 }
@@ -209,7 +267,6 @@ async function mudarStatus(id, novoStatus){
     const r = await fetch(ENDPOINT, {method:"POST",body:JSON.stringify(payload)});
     const t = await r.text();
     if(t.includes("ok")){
-      alert("✅ Status atualizado!");
       carregarPedidos();
     }else{
       alert("❌ Erro ao atualizar status.");
@@ -225,19 +282,19 @@ function imprimirPedido(nome,itens,total){
   w.document.write(`
     <html><head><title>Pedido de ${nome}</title></head>
     <body style="font-family:Inter;padding:20px;">
-      <h2>🍽️ Mercatto Delivery</h2>
+      <h2 style="color:#b8860b;">🍽️ Mercatto Delivery</h2>
       <p><strong>Cliente:</strong> ${nome}</p>
       <p><strong>Itens:</strong> ${itens}</p>
       <p><strong>Total:</strong> R$${Number(total).toFixed(2)}</p>
       <hr><p>Obrigado por escolher o Mercatto!</p>
-      <script>window.print();setTimeout(()=>window.close(),1000);<\/script>
+      <script>window.print();setTimeout(()=>window.close(),800);<\/script>
     </body></html>
   `);
   w.document.close();
 }
 
 carregarPedidos();
-setInterval(carregarPedidos,60000); // Atualiza a cada 1 minuto
+setInterval(carregarPedidos,60000);
 </script>
 </body>
 </html>
