--- a/index.html
+++ b/index.html
@@ -2,147 +2,116 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>📋 Painel Administrativo - Mercatto Delivery</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>📦 Painel Administrativo • Mercatto Delivery</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 <style>
-:root{--bg:#f4f1ec;--card:#fffaf5;--accent:#b8860b;--ink:#3a2e1f;
---radius:10px;--shadow:0 3px 8px rgba(0,0,0,0.1);}
-*{box-sizing:border-box;margin:0;padding:0;}
-body{font-family:'Inter',sans-serif;background:var(--bg);color:var(--ink);min-height:100vh;display:flex;flex-direction:column;}
-header{background:var(--accent);color:#fff;text-align:center;padding:18px;font-family:'Playfair Display',serif;font-size:26px;box-shadow:var(--shadow);}
-main{flex:1;display:flex;flex-direction:column;padding:20px;}
-.painel{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:20px;display:flex;flex-direction:column;height:calc(100vh - 130px);overflow:hidden;}
-.filtros{display:flex;align-items:center;gap:10px;margin-bottom:12px;flex-wrap:wrap;}
-.filtros input,.filtros select{padding:10px;border-radius:6px;border:1px solid #d7ccbb;background:#fff;flex:1;min-width:150px;font-size:14px;}
-.filtros button{background:var(--accent);color:#fff;border:none;border-radius:6px;padding:10px 16px;font-weight:600;cursor:pointer;}
-.filtros button:hover{opacity:.9;}
-.tabela-container{flex:1;overflow:auto;border:1px solid #e0d7c5;border-radius:var(--radius);}
-table{width:100%;border-collapse:collapse;font-size:15px;}
-th,td{padding:10px 12px;border-bottom:1px solid #eae2d2;text-align:left;}
-th{background:var(--accent);color:#fff;position:sticky;top:0;font-family:'Playfair Display',serif;}
-tr:nth-child(even){background:#fdfaf5;}tr:hover{background:#fff4dd;}
-.status{display:inline-block;padding:6px 10px;border-radius:8px;font-weight:600;color:#fff;font-size:13px;}
-.status.PENDENTE,.status.Recebido{background:#6b7280;}
-.status.Em_preparo{background:#eab308;}
-.status.Saiu_para_entrega{background:#2563eb;}
-.status.Entregue{background:#16a34a;}
-.status.Cancelado{background:#b91c1c;}
-button{background:var(--accent);color:#fff;border:none;border-radius:6px;padding:6px 12px;cursor:pointer;font-weight:600;}
+:root{
+  --bg:#0b0f19;--card:#151d2f;--text:#f8fafc;--muted:#94a3b8;
+  --accent:#ffb347;--accent2:#ff8f1f;--ok:#22c55e;--warn:#eab308;--err:#ef4444;
+  --radius:14px;--shadow:0 6px 20px rgba(0,0,0,.3);
+}
+body{
+  margin:0;background:var(--bg);color:var(--text);
+  font-family:'Inter',sans-serif;overflow-x:hidden;
+}
+header{
+  background:linear-gradient(90deg,var(--accent2),var(--accent));
+  text-align:center;padding:20px 10px;font-size:22px;
+  font-family:'Playfair Display',serif;box-shadow:var(--shadow);
+}
+.container{max-width:1100px;margin:20px auto;padding:0 15px;}
+.table{
+  width:100%;border-collapse:collapse;background:var(--card);
+  border-radius:var(--radius);overflow:hidden;box-shadow:var(--shadow);
+}
+th,td{padding:10px 12px;text-align:left;font-size:14px;}
+th{background:#1e293b;text-transform:uppercase;font-size:13px;}
+tr:nth-child(even){background:#101827;}
+.status{
+  padding:4px 8px;border-radius:8px;font-weight:600;text-transform:capitalize;
+}
+.status.PENDENTE{background:#4338ca;color:#fff;}
+.status.APROVADO{background:var(--ok);color:#fff;}
+.status["SAIU PARA ENTREGA"]{background:var(--warn);color:#000;}
+.status.CONCLUÍDO{background:#047857;color:#fff;}
+button{
+  padding:6px 12px;border:none;border-radius:8px;font-weight:600;
+  cursor:pointer;transition:.2s;
+}
+.btnAprovar{background:var(--ok);color:#fff;}
+.btnEntrega{background:var(--warn);color:#000;}
+.btnConcluir{background:#047857;color:#fff;}
+.btnExcluir{background:var(--err);color:#fff;}
 button:hover{opacity:.85;}
-select{border:1px solid #d7ccbb;border-radius:6px;padding:6px;background:#fff;font-size:14px;}
-@media print{header,.filtros{display:none;}body{background:white;}}
+#overlay{
+  position:fixed;inset:0;display:none;align-items:center;justify-content:center;
+  background:rgba(0,0,0,0.7);color:#fff;font-size:18px;z-index:9999;
+}
 </style>
 </head>
 <body>
-<header>🍽️ Painel Administrativo - Mercatto Delivery</header>
-<main>
-<div class="painel">
-  <div class="filtros">
-    <input type="date" id="filtroData">
-    <input type="text" id="filtroNome" placeholder="Buscar cliente...">
-    <select id="filtroStatus">
-      <option value="">Todos</option>
-      <option selected>PENDENTE</option>
-      <option>Recebido</option>
-      <option>Em preparo</option>
-      <option>Saiu para entrega</option>
-      <option>Entregue</option>
-      <option>Cancelado</option>
-    </select>
-    <button onclick="filtrarPedidos()">🔍 Filtrar</button>
-    <button onclick="window.print()">🖨️ Imprimir</button>
-  </div>
-  <div class="tabela-container">
-    <table id="tabelaPedidos">
-      <thead>
-        <tr><th>Data/Hora</th><th>Cliente</th><th>Itens</th><th>Endereço</th><th>Pagamento</th><th>Total</th><th>Status</th><th>Ações</th></tr>
-      </thead><tbody></tbody>
-    </table>
-  </div>
+<header>📦 Painel de Pedidos - Mercatto Delivery</header>
+<div class="container">
+  <table class="table" id="tabela">
+    <thead>
+      <tr>
+        <th>Data/Hora</th><th>Nome</th><th>Itens</th><th>Total</th>
+        <th>Status</th><th>Ações</th>
+      </tr>
+    </thead>
+    <tbody id="listaPedidos"></tbody>
+  </table>
 </div>
-</main>
+
+<div id="overlay">Atualizando status...</div>
+
 <script>
-const ENDPOINT="https://script.google.com/macros/s/AKfycbzXUygqP0pBJ-XL5RH-3Nwyr9iq2dPtxhB8ouyvXHCvpgNSDK9XVx5W9TL43HKbrgol/exec";
-let pedidos=[], pendentesAtuais=0;
-const audio = new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg");
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbxcdhUN2YY-iSejxsxc7AWAG4t_DYKN7_tJkNrZ4O1acG5v0Wr0zUDMga2b2FiOs6Qa/exec";
 
+/* 🔄 CARREGAR PEDIDOS */
 async function carregarPedidos(){
-  const tbody=document.querySelector("#tabelaPedidos tbody");
-  tbody.innerHTML="<tr><td colspan='8' style='text-align:center;padding:20px;'>⏳ Carregando...</td></tr>";
-  try{
-    const r=await fetch(ENDPOINT+"?acao=listar");
-    pedidos=await r.json();
-    const pendentes=pedidos.filter(p=>(p.status||"PENDENTE").toUpperCase().includes("PENDENTE"));
-    if(pendentes.length>pendentesAtuais && pendentesAtuais!==0){ audio.play(); }
-    pendentesAtuais=pendentes.length;
-    renderPedidos(pendentes);
-  }catch(e){
-    tbody.innerHTML="<tr><td colspan='8' style='text-align:center;color:red;'>Erro ao carregar pedidos ⚠️</td></tr>";
-  }
-}
+  const res = await fetch(`${ENDPOINT}?acao=listaPedidos`);
+  const pedidos = await res.json();
+  const corpo = document.getElementById("listaPedidos");
+  corpo.innerHTML = "";
 
-function renderPedidos(lista){
-  const tbody=document.querySelector("#tabelaPedidos tbody");
-  tbody.innerHTML="";
-  if(lista.length===0){
-    tbody.innerHTML="<tr><td colspan='8' style='text-align:center;padding:20px;'>Nenhum pedido encontrado.</td></tr>";
-    return;
-  }
-  lista.forEach(p=>{
-    const status=(p.status||"PENDENTE").trim();
-    const statusClass=status.replace(/\s/g,"_");
+  pedidos.reverse().forEach(p=>{
     const tr=document.createElement("tr");
     tr.innerHTML=`
-      <td>${p.dataHora||"-"}</td>
-      <td>${p.nome||"-"}</td>
-      <td>${p.itens||"-"}</td>
-      <td>${p.endereco||""}, ${p.numero||""} - ${p.bairro||""}</td>
-      <td>${p.forma||"-"}</td>
-      <td><strong>R$${Number(p.total||0).toFixed(2)}</strong></td>
-      <td><span class="status ${statusClass}">${status}</span></td>
+      <td>${p["Data/Hora"]||""}</td>
+      <td>${p["Nome"]||""}</td>
+      <td>${p["Itens"]||""}</td>
+      <td><strong>R$${Number(p["Total (R$)"]||0).toFixed(2)}</strong></td>
+      <td><span class="status ${p.Status}">${p.Status}</span></td>
       <td>
-        <select onchange="mudarStatus('${p.id}',this.value)">
-          <option selected hidden>${status}</option>
-          <option>PENDENTE</option>
-          <option>Recebido</option>
-          <option>Em preparo</option>
-          <option>Saiu para entrega</option>
-          <option>Entregue</option>
-          <option>Cancelado</option>
-        </select>
-        <button onclick="imprimirPedido('${p.nome}','${p.itens}','${p.total}')">🖨️</button>
+        <button class="btnAprovar" onclick="mudarStatus('${p['Código Interno (ID Pedido)']}','APROVADO')">Aprovar</button>
+        <button class="btnEntrega" onclick="mudarStatus('${p['Código Interno (ID Pedido)']}','SAIU PARA ENTREGA')">Entrega</button>
+        <button class="btnConcluir" onclick="mudarStatus('${p['Código Interno (ID Pedido)']}','CONCLUÍDO')">Concluir</button>
       </td>`;
-    tbody.appendChild(tr);
+    corpo.appendChild(tr);
   });
 }
 
-async function mudarStatus(id,novoStatus){
-  if(!confirm(`Alterar status para "${novoStatus}"?`))return;
-  const payload={acao:"atualizarStatus",id,status:novoStatus};
-  const r=await fetch(ENDPOINT,{method:"POST",body:JSON.stringify(payload)});
-  if((await r.text()).includes("ok"))carregarPedidos();
+/* 🔁 ALTERAR STATUS */
+async function mudarStatus(id, status){
+  document.getElementById("overlay").style.display="flex";
+  try{
+    const r = await fetch(`${ENDPOINT}?acao=atualizaStatus&id=${id}&status=${encodeURIComponent(status)}`);
+    const t = await r.text();
+    if(t.includes("ok")){
+      await carregarPedidos();
+    }else{
+      alert("Erro ao atualizar status!");
+    }
+  }catch(err){
+    alert("Erro de conexão: "+err);
+  }finally{
+    document.getElementById("overlay").style.display="none";
+  }
 }
 
-function imprimirPedido(nome,itens,total){
-  const w=window.open("","print","width=600,height=800");
-  w.document.write(`
-    <html><head><title>Pedido de ${nome}</title></head>
-    <body style="font-family:Inter;padding:20px;">
-      <h2 style="color:#b8860b;">🍽️ Mercatto Delivery</h2>
-      <p><strong>Cliente:</strong> ${nome}</p>
-      <p><strong>Itens:</strong> ${itens}</p>
-      <p><strong>Total:</strong> R$${Number(total).toFixed(2)}</p>
-      <hr><p>Obrigado por escolher o Mercatto!</p>
-      <script>window.print();setTimeout(()=>window.close(),800);<\/script>
-    </body></html>
-  `);
-  w.document.close();
-}
-
-carregarPedidos();
-setInterval(carregarPedidos,30000); // verifica a cada 30s
+window.onload=carregarPedidos;
 </script>
-
 </body>
 </html>
